classDiagram
    class Owner {
        +String name
        +int time_available
        -dict _pets
        +List pets
        +add_pet(pet)
    }

    class Pet {
        +String name
        +String species
        +List tasks
        +add_task(task)
        +remove_task(title)
    }

    class Task {
        +String title
        +int duration
        +String priority
        +bool is_done
        +String pet_name
        +String recurrence
        +date due_date
        +int start_time
        +mark_complete() Task
    }

    class Scheduler {
        +Owner owner
        +collect_all_tasks() List
        +sort_by_priority(tasks) List
        +sort_by_time(tasks) List
        +fit_to_time(tasks) List
        +generate_schedule() List
        +detect_conflicts(scheduled) List
        +complete_task(task) Task
        +explain_plan(scheduled, all_tasks) String
    }

    Owner "1" --> "many" Pet : owns
    Pet "1" --> "many" Task : has
    Scheduler "1" --> "1" Owner : manages
    Scheduler ..> Task : schedules